python/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test
  namespace: test
  name: test
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: test
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - image: 862962005596.dkr.ecr.eu-central-1.amazonaws.com/whoami:2.5
        imagePullPolicy: Always
        name: test
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
