python/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
  namespace: test
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: test
  type: ClusterIP
